.workshop/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spawner
  annotations:
    homeroom/title: "Browser Testing"
    homeroom/description: "Workshop for testing browser compatability."
spec:
  rules:
  - host: "lab-browser-testing.${CLUSTER_SUBDOMAIN}"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: spawner
          servicePort: 8080
